# repo_template

./: README.md  setup.bash  template_gitlab-ci.yml  template_main.py
docker/: Dockerfile  build.yml  common.yml  docker-compose.yml  ros_entrypoint.sh
docker/ros/: Dockerfile  dev_docker-compose.yml  docker-compose.yml
docker/ros2/: Dockerfile  dev_docker-compose.yml  docker-compose.yml
python/: setup.py
python/app/: README.md
ros/ros_package/: setup.py
ros/ros_package_interfaces/: CMakeLists.txt  package.xml
ros2/ros_package/: package.xml  setup.cfg  setup.py
ros2/ros_package_interfaces/: CMakeLists.txt  package.xml
ros_package/: CMakeLists.txt  package.xml
templates/: README.md  ros1_main.py  ros2_main.py
tests/unit_tests/: test_example.py
